fixed header and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2784,13 +2784,13 @@ section{
 }
 
 .solutions-page .profile-text div ul{
-    margin-top: 20px;
+    margin-top: 25px;
     padding-left: 20px;
     list-style: square;
 }
 
 .solutions-page .profile-text div ul li{
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 
